--- a/app/views/chugtypes/index.html.erb
+++ b/app/views/chugtypes/index.html.erb
@@ -4,19 +4,19 @@
 
 <% content_for :options do %>
   <div class="flex flex-row-reverse">
-    <%= link_to 'Nieuwe categorie', new_chugtype_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+    <%= link_to 'Nieuwe categorie', new_chugtype_path, class: button_classes %>
   </div>
 <% end %>
 
 <div class="flex flex-col -m-6">
   <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
     <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-100">
+      <div class="shadow overflow-hidden border-b border-gray-200 dark:border-gray-700 sm:rounded-lg">
+        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+          <thead class="bg-gray-100 dark:bg-black">
           <tr>
             <% ["Categorie", "Hoeveelheid", "Snelste tijd", "Aantal x gevouwen", "Aangemaakt op"].each do |x| %>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
                 <%= x %>
               </th>
             <% end %>
@@ -25,7 +25,7 @@
             </th>
           </tr>
           </thead>
-          <tbody class="bg-white divide-y divide-gray-200">
+          <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
           <%= render @chugtypes %>
           </tbody>
         </table>
