--- a/app/views/chugs/_chug.html.erb
+++ b/app/views/chugs/_chug.html.erb
@@ -5,20 +5,20 @@
     <% end %>
     <div class="flex-col flex-1">
       <div class="flex flex-col sm:flex-row justify-between self-center">
-        <h3 class="flex-grow font-medium"><strong style="font-size: large"><%= chug.time.round(2) %></strong>s
+        <h3 class="flex-grow font-medium dark:text-gray-200"><strong style="font-size: large"><%= chug.time.round(2) %></strong>s
           <% if chug.comment? %><br><i><%= chug.comment %></i>
           <% end %></h3>
         <span class="relative z-0 inline-flex rounded-md">
-          <%= link_to edit_chug_url(chug), class: 'inline-flex items-center p-1 border border-gray-300 text-xs font-medium rounded-l-md text-gray-900 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' do %>
+          <%= link_to edit_chug_url(chug), class: 'inline-flex items-center p-1 border border-gray-300 dark:border-gray-700 text-xs font-medium rounded-l-md text-gray-900 dark:text-gray-200 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' do %>
             <%= heroicon('pencil', class_name: "h-4 w-4") %> <span class="sm:hidden">Wijzigen</span>
           <% end %>
           <%= link_to chug, method: :delete, data: { confirm: 'Weet je het zeker?' }, title: chug.user.name,
-                      class: '-ml-px inline-flex items-center p-1 border border-gray-300 text-xs font-medium rounded-r-md text-gray-900 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' do %>
+                      class: '-ml-px inline-flex items-center p-1 border border-gray-300 dark:border-gray-700 text-xs font-medium rounded-r-md text-gray-900 dark:text-gray-200 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' do %>
           <%= heroicon('trash', class_name: "h-4 w-4") %> <span class="sm:hidden">Verwijderen</span>
           <% end %>
         </span>
       </div>
-      <div class="flex flex-col sm:flex-row text-gray-500">
+      <div class="flex flex-col sm:flex-row text-gray-500 dark:text-gray-400">
         <div class="flex-grow"><%= chug.user.name %></div>
         <p><%= time_ago_in_words(chug.created_at) %> geleden.</p>
       </div>
