--- a/app/views/chugs/_list.html.erb
+++ b/app/views/chugs/_list.html.erb
@@ -1,3 +1,3 @@
-<ul role="list" class="divide-y divide-gray-200">
+<ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
   <%= render chugs %>
 </ul>
