--- a/app/views/chugs/_podium_list.html.erb
+++ b/app/views/chugs/_podium_list.html.erb
@@ -29,7 +29,7 @@
           <% gravatar_for chug.user, class: "absolute z-20 gravatar bronze-gravatar rounded-full" %>
         <% end %>
         <div class="flex items-center justify-center">
-          <p class="text-center absolute bronze-text w-24 text-sm dark:text-gray-200w"><strong style="font-size: large"><%= chug.time.round(2) %></strong>s
+          <p class="text-center absolute bronze-text w-24 text-sm dark:text-gray-200"><strong style="font-size: large"><%= chug.time.round(2) %></strong>s
             <br><i><%= chug.user.id == 7 && chug.comment.present? ? chug.comment : chug.user.name %></i>
           </p>
         </div>
