Changed head colour for consistency across site

--- a/app/views/beers/table.html.erb
+++ b/app/views/beers/table.html.erb
@@ -3,7 +3,7 @@
     <div class="flex flex-col -m-6">
       <div class="shadow overflow-hidden border-b border-gray-200 dark:border-gray-700 sm:rounded-lg">
         <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
-          <thead class="bg-gray-100 dark:bg-gray-900">
+          <thead class="bg-gray-100 dark:bg-black">
           <tr>
             <% columns = [
               ["Naam", :name],
