--- a/app/views/layouts/application_public.html.erb
+++ b/app/views/layouts/application_public.html.erb
@@ -9,14 +9,14 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body class="dark:bg-gray-900">
     <div class="container mx-auto">
       <%= render 'layouts/alert' %>
 
       <% if content_for?(:title) %>
         <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
           <div class="text-center">
-            <h1 class="text-4xl font-semibold text-gray-900 lg:text-5xl"><%= yield :title %></h1>
+            <h1 class="text-4xl font-semibold text-gray-900 dark:text-gray-200 lg:text-5xl"><%= yield :title %></h1>
           </div>
         </div>
       <% end %>
@@ -34,13 +34,13 @@
 
         <% pages.each do |name, path| %>
           <div class="px-5 py-2">
-            <%= link_to name, path, class: "text-base text-gray-500 hover:text-gray-900" %>
+            <%= link_to name, path, class: "text-base text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-200" %>
           </div>
         <% end %>
 
         <% PublicPage.where(public: true).each do |pp| %>
           <div class="px-5 py-2">
-            <%= link_to pp.title, "/#{pp.title}", class: "text-base text-gray-500 hover:text-gray-900" %>
+            <%= link_to pp.title, "/#{pp.title}", class: "text-base text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:text-gray-200" %>
           </div>
         <% end %>
       </nav>
