--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -4,27 +4,27 @@
 
 <dl class="mx-8 space-y-8">
   <div>
-    <dt class="text-lg leading-6 font-semibold text-gray-900">
+    <dt class="text-lg leading-6 font-semibold text-gray-900 dark:text-gray-200">
       Hamers zonder Sikkel is verantwoordelijk voor de verwerking van persoonsgegevens zoals weergegeven in deze
       privacyverklaring.
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Contactgegevens: https://www.zondersikkel.nl - dev@zondersikkel.nl
     </dd>
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Persoonsgegevens die wij verwerken
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hamers zonder Sikkel verwerkt je persoonsgegevens doordat je gebruik maakt van onze diensten en/of omdat je deze
       gegevens zelf aan ons verstrekt.
     </dd>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hieronder vind je een overzicht van de persoonsgegevens die wij verwerken:
     </dd>
-    <ul class="list-disc list-inside text-gray-600">
+    <ul class="list-disc list-inside text-gray-600 dark:text-gray-400">
       <li>Voor- en achternaam</li>
       <li>E-mailadres</li>
       <li>IP-adres</li>
@@ -33,10 +33,10 @@
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Bijzondere en/of gevoelige persoonsgegevens die wij verwerken
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Onze website en/of dienst heeft niet de intentie gegevens te verzamelen over websitebezoekers die jonger zijn dan
       16 jaar. Tenzij ze toestemming hebben van ouders of voogd. We kunnen echter niet controleren of een bezoeker ouder
       dan 16 is. Wij raden ouders dan ook aan betrokken te zijn bij de online activiteiten van hun kinderen, om zo te
@@ -47,19 +47,19 @@
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Met welk doel en op basis van welke grondslag wij persoonsgegevens verwerken
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hamers zonder Sikkel verwerkt jouw persoonsgegevens om de mogelijkheid aan te bieden een account aan te maken.
     </dd>
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Geautomatiseerde besluitvorming
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hamers zonder Sikkel neemt niet op basis van geautomatiseerde verwerkingen besluiten over zaken die (aanzienlijke)
       gevolgen kunnen hebben voor personen. Het gaat hier om besluiten die worden genomen door computerprogramma's of
       -systemen, zonder dat daar een mens (bijvoorbeeld een medewerker van Hamers zonder Sikkel) tussen zit.
@@ -67,30 +67,30 @@
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Hoe lang we persoonsgegevens bewaren
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hamers zonder Sikkel bewaart je persoonsgegevens niet langer dan strikt nodig is om de doelen te realiseren
       waarvoor je gegevens worden verzameld.
     </dd>
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Delen van persoonsgegevens met derden
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hamers zonder Sikkel verstrekt uitsluitend aan derden en alleen als dit nodig is voor de uitvoering van onze
       overeenkomst met jou of om te voldoen aan een wettelijke verplichting.
     </dd>
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Cookies, of vergelijkbare technieken, die wij gebruiken
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hamers zonder Sikkel gebruikt alleen technische en functionele cookies. En analytische cookies die geen inbreuk
       maken op je privacy. Een cookie is een klein tekstbestand dat bij het eerste bezoek aan deze website wordt
       opgeslagen op jouw computer, tablet of smartphone. De cookies die wij gebruiken zijn noodzakelijk voor de
@@ -102,10 +102,10 @@
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Gegevens inzien, aanpassen of verwijderen
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Je hebt het recht om je persoonsgegevens in te zien, te corrigeren of te verwijderen. Dit kun je zelf doen via de
       persoonlijke instellingen van jouw account. Daarnaast heb je het recht om je eventuele toestemming voor de
       gegevensverwerking in te trekken of bezwaar te maken tegen de verwerking van jouw persoonsgegevens door ons en heb
@@ -114,12 +114,12 @@
       organisatie, te sturen.
     </dd>
 
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Wil je gebruik maken van je recht op bezwaar en/of recht op gegevensoverdraagbaarheid of heb je andere
       vragen/opmerkingen over de gegevensverwerking, stuur dan een gespecificeerd verzoek naar dev@zondersikkel.nl.
     </dd>
 
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Om er zeker van te zijn dat het verzoek tot inzage door jou is gedaan, vragen wij jou een kopie van je
       identiteitsbewijs bij het verzoek mee te sturen. Maak in deze kopie je pasfoto, MRZ (machine readable zone, de
       strook met nummers onderaan het paspoort), paspoortnummer en Burgerservicenummer (BSN) zwart. Dit ter bescherming
@@ -129,10 +129,10 @@
   </div>
 
   <div>
-    <dt class="text-lg leading-6 font-medium text-gray-900">
+    <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-200">
       Hoe wij persoonsgegevens beveiligen
     </dt>
-    <dd class="mt-2 text-base text-gray-600">
+    <dd class="mt-2 text-base text-gray-600 dark:text-gray-400">
       Hamers zonder Sikkel neemt de bescherming van jouw gegevens serieus en neemt passende maatregelen om misbruik,
       verlies, onbevoegde toegang, ongewenste openbaarmaking en ongeoorloofde wijziging tegen te gaan. Als jij het idee
       hebt dat jouw gegevens toch niet goed beveiligd zijn of er aanwijzingen zijn van misbruik, neem dan contact op via
