Divide has now correct colour

--- a/app/views/users/settings/password.html.erb
+++ b/app/views/users/settings/password.html.erb
@@ -2,7 +2,7 @@
   Wijzig je wachtwoord
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+<div class="divide-y divide-gray-200 dark:divide-gray-700 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
   <aside class="-ml-6 my-6 md:col-span-3 md:pr-6">
     <%= render partial: 'users/settings/menu' %>
   </aside>
