No data text readable on dark bg

--- a/app/views/beers/table.html.erb
+++ b/app/views/beers/table.html.erb
@@ -87,6 +87,8 @@
       </div>
     </div>
   <% else %>
+  <div class="text-gray-200">
     Geen data beschikbaar.
+  </div>  
   <% end %>
 </turbo-frame>
