--- a/app/views/shared/pagination/_default.html.erb
+++ b/app/views/shared/pagination/_default.html.erb
@@ -2,37 +2,37 @@
   <div class="flex justify-center">
     <nav class="z-0 inline-flex rounded-md shadow-sm -space-x-px">
       <% if @pagy.prev -%>
-        <a href="<%= pagy_url_for(@pagy, @pagy.prev) %>" class="page prev relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500  dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800">
+        <a href="<%= pagy_url_for(@pagy, @pagy.prev) %>" class="page prev relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500  dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800">
           <%= heroicon('chevron-left', style: :solid, class_name: "h-5 w-5") %>
         </a>
       <% else %>
-    <span class="page prev disabled cursor-not-allowed relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800">
+    <span class="page prev disabled cursor-not-allowed relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800">
       <%= heroicon('chevron-left', style: :solid, class_name: "h-5 w-5") %>
     </span>
       <% end %>
 
       <% @pagy.series.each do |item| %>
         <% if item.is_a?(Integer) %>
-          <a href="<%= pagy_url_for(@pagy, item) %>" class="bg-white dark:bg-gray-900 border-gray-300 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+          <a href="<%= pagy_url_for(@pagy, item) %>" class="bg-white dark:bg-gray-900 border-gray-300 dark:border-gray-700 text-gray-500 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-800 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
             <%== item %>
           </a>
         <% elsif item.is_a?(String) %>
-      <span class="z-10 bg-gray-100 dark:bg-gray-700 border-gray-400 dark:border-gray-200 text-gray-600 dark:text-gray-200 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+      <span class="z-10 bg-gray-100 dark:bg-gray-700 border-gray-400 dark:border-gray-500 dark:border-gray-200 text-gray-600 dark:text-gray-200 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
         <%= item %>
       </span>
         <% elsif item == :gap %>
-      <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white dark:bg-gray-900 text-sm font-medium text-gray-700 dark:text-gray-400">
+      <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-900 text-sm font-medium text-gray-700 dark:text-gray-400">
         ...
       </span>
         <% end -%>
       <% end %>
 
       <% if @pagy.next -%>
-        <a href="<%= pagy_url_for(@pagy, @pagy.next) %>" class="page prev relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500 hover:bg-gray-50 dark:hover:bg-gray-800">
+        <a href="<%= pagy_url_for(@pagy, @pagy.next) %>" class="page prev relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500 hover:bg-gray-50 dark:hover:bg-gray-800">
           <%= heroicon('chevron-right', style: :solid, class_name: "h-5 w-5") %>
         </a>
       <% else %>
-    <span class="page prev disabled cursor-not-allowed relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500 hover:bg-gray-50 dark:hover:bg-gray-800">
+    <span class="page prev disabled cursor-not-allowed relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-900 text-sm font-medium text-gray-500 hover:bg-gray-50 dark:hover:bg-gray-800">
       <%= heroicon('chevron-right', style: :solid, class_name: "h-5 w-5") %>
     </span>
       <% end %>
