--- a/app/views/shared/_next_event.html.erb
+++ b/app/views/shared/_next_event.html.erb
@@ -1,17 +1,17 @@
 <div class="overflow-hidden md:shadow md:rounded-lg md:p-4">
   <h1 class="text-hamers-red-400 text-xl font-bold">Volgende activiteit</h1>
   <% if @next_event %>
-    <h2 class="font-bold tracking-tight text-gray-900 text-2xl text-justify">
+    <h2 class="font-bold tracking-tight text-gray-900 dark:text-gray-200 text-2xl text-justify">
       <%= link_to @next_event.title, @next_event %>
     </h2>
-    <h3 class="text-gray-600">
+    <h3 class="text-gray-600 dark:text-gray-400">
       <%= @next_event.past? ? "Activiteit is bezig" : 
         "Over #{time_ago_in_words(@next_event.date)}" %>
     </h3>
     <div class="mt-8 flex">
       <div class="inline-flex rounded-md shadow w-full">
         <% if @signup %>
-          <button class="cursor-pointer w-full text-center p-4 border border-transparent text-base font-medium rounded-md text-gray-500 bg-gray-50">
+          <button class="cursor-pointer w-full text-center p-4 border border-transparent text-base font-medium rounded-md text-gray-500 dark:text-gray-400 bg-gray-50 dark:bg-gray-700">
             <%= @signup&.status ? "Je hebt je al ingeschreven! 👍" : "Je hebt je uitgeschreven." %>
           </button>
         <% elsif @next_event.open? %>
@@ -28,13 +28,13 @@
       </div>
     </div>
   <% else %>
-    <h3 class="mt-2 text-sm font-medium text-gray-900">Geen aankomende activiteiten :(</h3>
-    <p class="mt-1 text-sm text-gray-500">
+    <h3 class="mt-2 text-sm font-medium text-gray-900 dark:text-gray-200">Geen aankomende activiteiten :(</h3>
+    <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">
       Waarom maak je er niet een aan?
     </p>
     <div class="mt-6">
       <%= button_to new_event_path, method: :get,
-                    class: "inline-flex items-center px-4 py-2 text-sm font-bold rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600" do %>
+                    class: "inline-flex items-center px-4 py-2 text-sm font-bold rounded-md text-white dark:text-gray-200 bg-hamers-red-500 hover:bg-hamers-red-600 dark:hover:bg-hamers-red-400" do %>
         <!-- Heroicon name: solid/plus -->
         <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
              aria-hidden="true">
