--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% if !@current_user.otp_required_for_login? || @pagy.page == 1 %>
+<% if @pagy.page == 1 %>
   <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
     <%= render 'shared/user_info' %>
     <%= render 'shared/next_event' %>
@@ -21,15 +21,9 @@
 </div>
 
 <div class="-mt-6">
-  <% if @quotes %>
-    <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700 border-b border-gray-200 dark:border-gray-700 mb-6">
-      <%= render @quotes %>
-    </ul>
+  <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700 border-b border-gray-200 dark:border-gray-700 mb-6">
+    <%= render @quotes %>
+  </ul>
 
-    <%= render 'shared/pagination/default' %>
-  <% else %>
-    <div class="flex justify-center font-black dark:text-gray-200 m-8">
-      <h1>Ik ben een droeftoeter zonder 2FA, daarom zijn mijn quotes weg.</h1>
-    </div>
-  <% end %>
+  <%= render 'shared/pagination/default' %>
 </div>
