--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,8 +5,8 @@
 <% content_for :options do %>
   <div class="flex flex-row flex-wrap p-1">
     <%= search_form_for @search, class: "inline-flex rounded-md" do |f| %>
-      <%= f.search_field :title_or_location, placeholder: 'Zoek hier naar activiteiten', class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full text-sm border-gray-300 rounded-l-md' %>
-      <%= submit_tag "Zoek", class: "-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500" %>
+      <%= f.search_field :title, placeholder: 'Zoek hier naar activiteiten', class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full text-sm dark:text-gray-200 dark:bg-gray-800 border-gray-300 dark:border-gray-700 rounded-l-md' %>
+      <%= submit_tag "Zoek", class: "-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 text-sm font-medium text-gray-700 dark:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-700 focus:z-10 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500" %>
     <% end %>
     <div class="mt-2 sm:mt-0 sm:ml-2">
       <%= button_to "Nieuwe activiteit", new_event_path, method: :get, class: button_classes %>
@@ -16,7 +16,8 @@
 
 <div class="-m-5 sm:-m-6">
   <% if @search_events %>
-   <%= render 'events/list', events: @search_events %>
+    <%= button_to "Terug naar alle activiteiten", events_path, method: :get, class: 'm-4 ' + button_classes %>
+    <%= render 'events/list', events: @search_events %>
     <div class="py-6">
       <%= render 'shared/pagination/default' %>
     </div>
@@ -49,8 +50,9 @@
                     </div>
                     <p class="text-sm text-gray-500 dark:text-gray-400"><%= request.base_url %>/ical/<%= ak.key %>.ics</p>
                   </div>
-                </li>
-              <% end %>
+                </div>
+              </li>
+            <% end %>
             </ul>
           </div>
         </div>
