--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
           <h4>Gemiste dispuutsborrels</h4>
           <ul class="list-disc list-inside">
             <% @missed_drinks.each do |md| %>
-              <li><%= link_to md.date.strftime("%d-%m-%Y"), md %></li>
+              <li class="text-gray-500 dark:text-gray-400"><%= link_to md.date.strftime("%d-%m-%Y"), md %></li>
             <% end %>
           </ul>
         </div>
