--- a/app/views/layouts/application_public.html.erb
+++ b/app/views/layouts/application_public.html.erb
@@ -3,8 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hamers zonder Sikkel</title>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbo-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
+    <%= stylesheet_link_tag 'tailwind', media: 'all', 'data-turbo-track': 'reload' %>
+    <%= javascript_importmap_tags %>
 
     <%= csrf_meta_tags %>
   </head>
