--- a/app/views/beers/table.html.erb
+++ b/app/views/beers/table.html.erb
@@ -34,7 +34,7 @@
                   <% end %>
                   <div class="text-sm font-medium text-gray-900 dark:text-gray-200 popover"
                       data-controller="popover"
-                      data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut"
+                      data-action="mouseover->popover#show mouseout->popover#hide"
                       data-popover-translate-x="0"
                       data-popover-translate-y="15%">
                     <%= beer.name %>
