--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
           Vroegâh
         </button>
       </nav>
-      <div data-controller="popover" data-popover-translate-x="-90%" data-popover-translate-y="0" data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut">
+      <div data-controller="popover" data-popover-translate-x="-90%" data-popover-translate-y="0" data-action="mouseover->popover#show mouseout->popover#hide">
         <span>
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-current dark:text-gray-300" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"/>
